force-app/main/default/objects/generatpageHeader__mdt/generatpageHeader__mdt.object-meta.xml
<CustomObject>
    <label>generatpageHeader</label>
    <pluralLabel>generatpageHeader</pluralLabel>
</CustomObject>