force-app/main/default/objects/generatpageHeader__mdt/fields/CompanyId__c.field-meta.xml
<CustomField>
    <fullName>CompanyId__c</fullName>
    <label>CompanyId</label>
    <length>85</length>
    <type>Text</type>
</CustomField>