force-app/main/default/objects/generatpageHeader__mdt/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>CompanyName</label>
    <length>85</length>
    <type>Text</type>
</CustomField>