force-app/main/default/objects/generatpageHeader__mdt/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <length>85</length>
    <type>Text</type>
</CustomField>