force-app/main/default/objects/generatpageHeader__mdt/fields/PoBox__c.field-meta.xml
<CustomField>
    <fullName>PoBox__c</fullName>
    <label>PoBox</label>
    <length>85</length>
    <type>Text</type>
</CustomField>