force-app/main/default/objects/generatpageHeader__mdt/fields/TaxId__c.field-meta.xml
<CustomField>
    <fullName>TaxId__c</fullName>
    <label>TaxId</label>
    <length>85</length>
    <type>Text</type>
</CustomField>